--- a/src/Components/Recommended/Recommended.css
+++ b/src/Components/Recommended/Recommended.css
@@ -1,28 +1,30 @@
-.recommended_container{
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
+.recommended_container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
 }
 .recommended_container p {
-    font-size: 1.25rem;
-    font-weight: 500;
+  font-size: 1.25rem;
+  font-weight: 500;
 }
 
-.list{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 0.85rem;
-    overflow-y: scroll ;
-    height: 25vh;
+.list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  gap: 1rem;
+  margin-top: 0.85rem;
+  flex: 1;
+  overflow-y: auto;
+  scroll-behavior: smooth;
 }
 
-.song_list{
-    width: 100%;
-    margin-bottom: 0.5rem;
-    border-radius: 1rem;
+.song_list {
+  width: 100%;
+  margin-bottom: 0.5rem;
+  border-radius: 1rem;
 }
