--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,40 @@
 .app_container {
-    width: 100%;
-    height: 100vh;
-    overflow-x: hidden;
-    
-    padding: 1rem 2rem;
-    background: white;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    border: 1px solid white;
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  padding: 1rem 2rem;
+  /* background: white; */
+  background-image: url(./assets/moody_bg.png);
+  background-position: center;
+  background-size: cover;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  border: 1px solid white;
 }
+
 
 .app_head {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-.app_head h1{
-    font-size: 2rem;
-    font-weight: 800;
+.app_head h1 {
+  font-size: 2rem;
+  font-weight: 800;
 }
 .app_head p {
-    font-size: 1rem;
-    font-weight: 500;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .line {
-    width: 100%;
-    height: 1px;
-    /* background: linear-gradient(90deg,rgba(0, 0, 64, 1) 0%, rgba(48, 59, 133, 1) 52%, rgba(16, 4, 59, 1) 100%); */
-    background: black;
+  width: 100%;
+  height: 1px;
+  /* background: linear-gradient(90deg,rgba(0, 0, 64, 1) 0%, rgba(48, 59, 133, 1) 52%, rgba(16, 4, 59, 1) 100%); */
+  background: black;
 }
