--- a/src/Components/Moods/Moods.css
+++ b/src/Components/Moods/Moods.css
@@ -1,31 +1,33 @@
 .mood_container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0.5rem 0rem;
-    gap: 0.75rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0.5rem 0rem;
+  gap: 0.75rem;
 }
 
 .mood_btn {
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    font-weight: 600;
-    color: black;
-    outline: none;
-    border: none;
-    background: whitesmoke;
-    box-shadow: 0 0 5px black;
-    border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: black;
+  outline: none;
+  border: none;
+  background: rgb(229, 189, 241);
+  /* box-shadow: 0 0 5px black; */
+  border-radius: 1rem;
 }
 
-.active_mood{
-      padding: 0.5rem 1rem;
-    font-size: 1rem;
-    font-weight: 600;
-    color: rgb(252, 252, 252);
-    outline: none;
-    border: none;
-    background: rgb(9, 136, 255);
-    box-shadow: 0 0 5px black;
-    border-radius: 0.5rem;
+.active_mood {
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: rgb(252, 252, 252);
+  outline: none;
+  border: none;
+  background: rgb(159, 61, 201);
+  /* box-shadow: 0 0 5px black; */
+  border-radius: 0.5rem;
 }
