--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,22 @@
+
+
 .app_container {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
   padding: 1rem 2rem;
   /* background: white; */
-  background-image: url(./assets/moody_bg.png);
+  background-image: var(--app-bg);
   /* background-color: black; */
   background-position: center;
   background-size: cover;
   background-clip: border-box;
-  color: black;
+  color: var(--text);
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
-  border: 1px solid white;
+  /* border: 1px solid white; */
 }
 
 
@@ -43,7 +45,7 @@
   width: 100%;
   height: 1px;
   /* background: linear-gradient(90deg,rgba(0, 0, 64, 1) 0%, rgba(48, 59, 133, 1) 52%, rgba(16, 4, 59, 1) 100%); */
-  background: black;
+  background: var(--text);
 }
 
 .tuneCream_logo{
