--- a/src/Components/Moods/Moods.css
+++ b/src/Components/Moods/Moods.css
@@ -10,14 +10,14 @@
 
 .mood_btn {
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 600;
-  color: black;
+  color: var(--text);
   outline: none;
   border: none;
-  background: rgb(229, 189, 241);
+  background: var(--btn);
   /* box-shadow: 0 0 5px black; */
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 }
 
 .active_mood {
