--- a/src/Components/Moods/Moods.css
+++ b/src/Components/Moods/Moods.css
@@ -11,7 +11,7 @@
 .mood_btn {
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 300;
   color: var(--text);
   outline: none;
   border: none;
@@ -27,7 +27,34 @@
   color: rgb(252, 252, 252);
   outline: none;
   border: none;
-  background: rgb(159, 61, 201);
+  background: var(--btn_active);
   /* box-shadow: 0 0 5px black; */
   border-radius: 0.5rem;
+}
+
+/* Tablets */
+@media (min-width: 768px) {
+  .mood_container {
+    gap: 2rem;
+  }
+  .mood_btn {
+    padding: 0.75rem 1.25rem;
+    font-weight: 300;
+  }
+}
+
+/* Laptops */
+@media (min-width: 1024px) {
+  .mood_container {
+    gap: 4rem;
+  }
+  .mood_btn {
+    padding: 1rem 1.5rem;
+    font-weight: 300;
+    font-size: 1.25rem;
+  }
+}
+
+/* Desktops */
+@media (min-width: 1280px) {
 }
