--- a/src/Components/Player/Player.css
+++ b/src/Components/Player/Player.css
@@ -1,84 +1,124 @@
-.player_container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
+.player_container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
 }
 
-.player{
-    width: 100%;
-    border-radius: 1rem;
-    padding: 1rem 0;
-    box-shadow: 0 0 5px var(--text);
-    display: flex;
-    flex-direction: column;
+.player {
+  width: 100%;
+  border-radius: 1rem;
+  padding: 1rem 0;
+  box-shadow: 0 0 5px var(--text);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h2.title {
+  font-size: 2rem;
+  font-weight: 800;
+}
+h3.artist {
+  font-size: 1rem;
+  font-size: 500;
+  font-style: italic;
+}
+
+.playline {
+  width: 90%;
+  height: 3px;
+  background-color: rgb(163, 191, 206);
+  margin: 0.5rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+}
+
+.playhead {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: #4f8ef7;
+  position: absolute;
+}
+
+.play_buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-items: center;
+  gap: 0.25rem;
+}
+
+.backward,
+.forward {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 2rem;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.408);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--bg);
+}
+
+.play {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #69a0ff;
+  box-shadow: 0 0 5px rgb(30, 154, 243);
+}
+
+.timing {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Tablets */
+@media (min-width: 768px) {
+  .player_container {
     align-items: center;
-    justify-content: center;
-}
+    gap: 1rem;
+  }
+  .player_container p{
+    font-size: 1.5rem;
+  }
 
-h2.title{
+  h2.title {
     font-size: 2rem;
-    font-weight: 800;
-}
-h3.artist{
-    font-size: 1rem;
-    font-size: 500;
-    font-style: italic;
+    font-weight: 700;
+  }
+
+  .play_buttons {
+    gap: 1rem;
+  }
+
+  .backward,
+  .forward {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .play {
+    width: 4.5rem;
+    height: 4.5em;
+  }
 }
 
-.playline{
-    width: 90%;
-    height: 3px;
-    background-color: rgb(163, 191, 206);
-    margin: 0.5rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    position: relative;
+/* Laptops */
+@media (min-width: 1024px) {
 }
 
-.playhead{
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background-color: #4F8EF7;
-    position: absolute;
-}
-
-.play_buttons{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-items: center;
-    gap: 0.25rem;
-}
-
-.backward , .forward{
-    width: 3rem;
-    height: 3rem;
-    border-radius: 2rem;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.408);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--bg);
-}
-
-.play{
-    width: 3.5rem;
-    height: 3.5rem;
-    border-radius: 50%;
-     display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #69a0ff;
-    box-shadow: 0 0 5px rgb(30, 154, 243);
-}
-
-.timing{
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+/* Desktops */
+@media (min-width: 1280px) {
 }
