--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 .app_container {
   width: 100%;
   height: 100vh;
@@ -19,7 +17,6 @@
   /* border: 1px solid white; */
 }
 
-
 .app_head {
   width: 100%;
   display: flex;
@@ -27,7 +24,7 @@
   align-items: center;
   justify-content: space-between;
 }
-.app_headers{
+.app_headers {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -48,7 +45,7 @@
   background: var(--text);
 }
 
-.tuneCream_logo{
+.tuneCream_logo {
   width: 3rem;
   height: 3rem;
   border-radius: 1rem;
@@ -70,17 +67,15 @@
   }
 }
 
-
-
 /* Tablets */
 @media (min-width: 768px) {
-  .app_container{
+  .app_container {
     padding: 1.5rem 2rem;
   }
-  .app_head{
+  .app_head {
     padding: 1rem;
   }
-  .tuneCream_logo{
+  .tuneCream_logo {
     width: 4rem;
     height: 4rem;
   }
@@ -88,8 +83,18 @@
 
 /* Laptops */
 @media (min-width: 1024px) {
-  
+  .app_container {
+    padding: 1.5rem 4rem;
+  }
+  .app_head {
+    padding: 1rem;
+  }
+  .tuneCream_logo {
+    width: 4rem;
+    height: 4rem;
+  }
 }
 
 /* Desktops */
-@media (min-width: 1280px) {}
+@media (min-width: 1280px) {
+}
