--- a/src/Components/Recommended/Recommended.css
+++ b/src/Components/Recommended/Recommended.css
@@ -22,6 +22,11 @@
   overflow-y: auto;
   scroll-behavior: smooth;
 }
+.list h2{
+  width: 100%;
+  display: block;
+  text-align: center;
+}
 
 .song_list {
   width: 100%;
@@ -51,6 +56,34 @@
 
 /* Laptops */
 @media (min-width: 1024px) {
+  .recommended_container p {
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 0;
+  }
+
+  .list {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+    /* margin-top: 0.85rem; */
+    flex: 1;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+  }
+
+  .song_list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    /* justify-content: center; */
+    width: 100%;
+    /* margin-bottom: 0.5rem; */
+    border-radius: 1rem;
+  }
 }
 
 /* Desktops */
