--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   --btn : #2c026e;
   --btn_active :#4700c1;
   --app-bg: url("./assets/moddy_bg_dark.png");
+    --scrollbar-bg: #111827;
+  --scrollbar-thumb: #374151;
+  --scrollbar-thumb-hover: #4b5563;
 }
 /* [data-theme="dark"] {
   --bg: #0f172a;
@@ -21,6 +24,9 @@
   --btn : #cbcbcb;
   --btn_active :#2380f1;
   --app-bg: url("./assets/moody_bg.png");
+    --scrollbar-bg: #e5e7eb;        /* track */
+  --scrollbar-thumb: #c1c7d0;    /* thumb */
+  --scrollbar-thumb-hover: #9ca3af;
 }
 
 
@@ -30,10 +36,35 @@
   box-sizing: border-box;
   font-family: poppins;
    transition: background-color 0.25s ease, color 0.25s ease;
+     scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-bg);
 }
 
 html, body{
   width: 100%;
   height: 100%;
    overflow: hidden; 
+}
+
+/* =========================
+   SCROLLBAR (WEBKIT)
+========================= */
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--scrollbar-bg);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb);
+  border-radius: 999px;
+  border: 2px solid var(--scrollbar-bg);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-thumb-hover);
 }
